--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -39,13 +39,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
         android:text="@string/name"
-        app:layout_constraintBottom_toTopOf="@+id/etName"
-        app:layout_constraintStart_toStartOf="@+id/etName"
+        app:layout_constraintBottom_toTopOf="@+id/etNameLayout"
+        app:layout_constraintStart_toStartOf="@+id/etNameLayout"
         app:layout_constraintTop_toBottomOf="@+id/tvFillYourInfo"
         app:layout_constraintVertical_chainStyle="packed" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/etName"
+        android:id="@+id/etNameLayout"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginHorizontal="35dp"
@@ -67,7 +67,7 @@
             android:layout_height="match_parent"
             android:background="@drawable/edit_text_background_main"
             android:hint="@string/name_example"
-            android:inputType="textPassword"
+            android:inputType="textPersonName"
             android:lines="1"
             android:paddingHorizontal="15dp"
             android:textCursorDrawable="@drawable/cursor_drawable"
@@ -81,13 +81,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:text="@string/email"
-        app:layout_constraintBottom_toTopOf="@+id/etEmail"
-        app:layout_constraintStart_toStartOf="@+id/etEmail"
-        app:layout_constraintTop_toBottomOf="@+id/etName"
+        app:layout_constraintBottom_toTopOf="@+id/etEmailLayout"
+        app:layout_constraintStart_toStartOf="@+id/etEmailLayout"
+        app:layout_constraintTop_toBottomOf="@+id/etNameLayout"
         app:layout_constraintVertical_chainStyle="packed" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/etEmail"
+        android:id="@+id/etEmailLayout"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginHorizontal="35dp"
@@ -124,13 +124,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:text="@string/password"
-        app:layout_constraintBottom_toTopOf="@+id/etPassword"
-        app:layout_constraintStart_toStartOf="@+id/etPassword"
-        app:layout_constraintTop_toBottomOf="@+id/etEmail"
+        app:layout_constraintBottom_toTopOf="@+id/etPasswordLayout"
+        app:layout_constraintStart_toStartOf="@+id/etPasswordLayout"
+        app:layout_constraintTop_toBottomOf="@+id/etEmailLayout"
         app:layout_constraintVertical_chainStyle="packed" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/etPassword"
+        android:id="@+id/etPasswordLayout"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginHorizontal="35dp"
@@ -166,8 +166,8 @@
         android:layout_width="24dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
-        app:layout_constraintStart_toStartOf="@+id/etPassword"
-        app:layout_constraintTop_toBottomOf="@+id/etPassword"
+        app:layout_constraintStart_toStartOf="@+id/etPasswordLayout"
+        app:layout_constraintTop_toBottomOf="@+id/etPasswordLayout"
         app:layout_constraintVertical_chainStyle="packed" />
 
     <TextView
