--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -109,6 +109,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etPasswordText"
+            android:text="qwerty123"
             android:paddingVertical="0dp"
             android:lines="1"
             android:layout_width="match_parent"
