--- a/app/src/main/res/drawable/ic_toolbar_arrow_back.xml
+++ b/app/src/main/res/drawable/ic_toolbar_arrow_back.xml
@@ -1,8 +1,8 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="48dp"
-    android:height="48dp"
+    android:width="28dp"
+    android:height="28dp"
     android:autoMirrored="true"
-    android:tint="#000000"
+    android:tint="#FFFFFF"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
