--- a/app/src/main/res/layout/expandable_toolbar.xml
+++ b/app/src/main/res/layout/expandable_toolbar.xml
@@ -24,7 +24,7 @@
                 android:scaleType="centerCrop"
                 android:src="@drawable/code_geass_title"
                 app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="0.5" />
+                app:layout_collapseParallaxMultiplier="0.7" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
@@ -32,113 +32,171 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true"
+        android:layout_marginTop="-48dp"
+        android:elevation="8dp"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/selectedItemConstraintLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/animeCardViewTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
-                android:layout_marginTop="15dp"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_chainStyle="packed"
-                tools:text="Code Geass: Lelouch the Rebellion" />
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/animeCardViewSubTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
-                android:layout_marginVertical="7dp"
-                app:layout_constraintBottom_toTopOf="@id/animeCardViewLine"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/animeCardViewTitle"
-                app:layout_constraintVertical_chainStyle="packed"
-                tools:text="A high-schooler who's granted powers to make anyone instantly obedient dons a mask to lead Japan's rebellion against a long-invading Britannia." />
-
-            <View
-                android:id="@+id/animeCardViewLine"
-                android:layout_width="match_parent"
-
-                android:layout_height="0.5dp"
-                android:layout_marginHorizontal="15dp"
-                android:background="@color/grey_pressed"
-                app:layout_constraintBottom_toTopOf="@id/animeCardReleaseDateImageView"
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/ratings_container"
+                android:layout_width="wrap_content"
+                android:backgroundTint="@color/orange"
+                android:paddingHorizontal="8dp"
+                android:layout_height="32dp"
+                android:background="@drawable/rating_card_shape"
+                android:elevation="4dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/animeCardViewSubTitle" />
+                app:layout_constraintTop_toTopOf="parent">
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/animeCardReleaseDateImageView"
-                android:layout_width="18dp"
-                android:layout_height="18dp"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="9dp"
-                android:layout_marginEnd="5dp"
-                android:src="@drawable/calendar"
-                android:tint="@color/orange_anime_list_icons"
-                app:layout_constraintBottom_toTopOf="@id/animeCardViewAmountOfTimeImageView"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/animeCardViewLine"
-                app:layout_constraintVertical_chainStyle="packed" />
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/animeCardReleaseDateTextView"
-                android:layout_width="wrap_content"
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/animeCardViewRatingStarImageView"
+                        android:layout_width="18dp"
+                        android:layout_height="18dp"
+                        android:layout_margin="7dp"
+                        android:src="@drawable/star_rating"
+                        android:tint="@color/white"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/animeCardViewRating"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        android:text="5.0"
+                        android:textColor="@color/white"
+                        android:textSize="17sp"
+                        app:layout_constraintBottom_toBottomOf="@id/animeCardViewRatingStarImageView"
+                        app:layout_constraintStart_toEndOf="@id/animeCardViewRatingStarImageView"
+                        app:layout_constraintTop_toTopOf="@id/animeCardViewRatingStarImageView"
+                        tools:text="4.8" />
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/animeCardViewViews"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        android:text="(6.7 million Views)"
+                        android:textSize="17sp"
+                        android:textColor="@color/white"
+                        app:layout_constraintBottom_toBottomOf="@id/animeCardViewRatingStarImageView"
+                        app:layout_constraintStart_toEndOf="@id/animeCardViewRating"
+                        app:layout_constraintTop_toTopOf="@id/animeCardViewRatingStarImageView"
+                        tools:text="(6.7 million Views)" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                app:layout_constraintBottom_toBottomOf="@id/animeCardReleaseDateImageView"
-                app:layout_constraintStart_toEndOf="@id/animeCardReleaseDateImageView"
-                app:layout_constraintTop_toTopOf="@id/animeCardReleaseDateImageView"
-                app:layout_constraintVertical_chainStyle="packed"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/bg_scroll_detail"
+                android:orientation="vertical"
+                app:layout_constraintTop_toTopOf="@id/ratings_container">
 
-                tools:text="12-12-1988" />
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/animeCardViewTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="15dp"
+                    android:layout_marginTop="34dp"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_chainStyle="packed"
+                    tools:text="Code Geass: Lelouch the Rebellion" />
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/animeCardViewAmountOfTimeImageView"
-                android:layout_width="18dp"
-                android:layout_height="18dp"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="9dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginBottom="15dp"
-                android:src="@drawable/clock"
-                android:tint="@color/orange_anime_list_icons"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/animeCardReleaseDateImageView" />
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/animeCardViewSubTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="15dp"
+                    android:layout_marginVertical="7dp"
+                    app:layout_constraintBottom_toTopOf="@id/animeCardViewLine"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/animeCardViewTitle"
+                    app:layout_constraintVertical_chainStyle="packed"
+                    tools:text="A high-schooler who's granted powers to make anyone instantly obedient dons a mask to lead Japan's rebellion against a long-invading Britannia." />
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/animeCardViewAmountOfTimeTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                app:layout_constraintBottom_toBottomOf="@id/animeCardViewAmountOfTimeImageView"
-                app:layout_constraintStart_toEndOf="@id/animeCardViewAmountOfTimeImageView"
-                app:layout_constraintTop_toTopOf="@id/animeCardViewAmountOfTimeImageView"
+                <View
+                    android:id="@+id/animeCardViewLine"
+                    android:layout_width="match_parent"
 
-                tools:text="24 ep" />
-        </LinearLayout>
+                    android:layout_height="0.5dp"
+                    android:layout_marginHorizontal="15dp"
+                    android:background="@color/grey_pressed"
+                    app:layout_constraintBottom_toTopOf="@id/animeCardReleaseDateImageView"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/animeCardViewSubTitle" />
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/animeCardReleaseDateImageView"
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="9dp"
+                    android:layout_marginEnd="5dp"
+                    android:src="@drawable/calendar"
+                    android:tint="@color/orange_anime_list_icons"
+                    app:layout_constraintBottom_toTopOf="@id/animeCardViewAmountOfTimeImageView"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/animeCardViewLine"
+                    app:layout_constraintVertical_chainStyle="packed" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/animeCardReleaseDateTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    app:layout_constraintBottom_toBottomOf="@id/animeCardReleaseDateImageView"
+                    app:layout_constraintStart_toEndOf="@id/animeCardReleaseDateImageView"
+                    app:layout_constraintTop_toTopOf="@id/animeCardReleaseDateImageView"
+                    app:layout_constraintVertical_chainStyle="packed"
+
+                    tools:text="12-12-1988" />
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/animeCardViewAmountOfTimeImageView"
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="9dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="15dp"
+                    android:src="@drawable/clock"
+                    android:tint="@color/orange_anime_list_icons"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/animeCardReleaseDateImageView" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/animeCardViewAmountOfTimeTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    app:layout_constraintBottom_toBottomOf="@id/animeCardViewAmountOfTimeImageView"
+                    app:layout_constraintStart_toEndOf="@id/animeCardViewAmountOfTimeImageView"
+                    app:layout_constraintTop_toTopOf="@id/animeCardViewAmountOfTimeImageView"
+
+                    tools:text="24 ep" />
+            </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:background="@drawable/button_selector"
-        android:textColor="@color/button_text_selector"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_anchor="@+id/appBar"
-        app:layout_anchorGravity="center|bottom"
-        android:text="Shuffle Play"
-        android:elevation="3dp"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
