--- a/app/src/main/res/layout/fragment_anime.xml
+++ b/app/src/main/res/layout/fragment_anime.xml
@@ -12,6 +12,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.Toolbar
+            android:id="@+id/anime_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/orange"
