Added size calculation for tabs fragments

--- a/app/src/main/res/layout/fragment_anime_selected.xml
+++ b/app/src/main/res/layout/fragment_anime_selected.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBar"
@@ -30,6 +29,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/scrollContent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="-48dp"
@@ -100,6 +100,7 @@
             </androidx.appcompat.widget.LinearLayoutCompat>
 
             <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/detailsContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -131,7 +132,7 @@
 
                     android:layout_height="0.5dp"
                     android:layout_marginHorizontal="15dp"
-                    android:background="@color/grey_pressed"/>
+                    android:background="@color/grey_pressed" />
 
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="wrap_content"
@@ -146,14 +147,14 @@
                         android:layout_marginTop="9dp"
                         android:layout_marginEnd="5dp"
                         android:src="@drawable/calendar"
-                        android:tint="@color/orange_anime_list_icons"/>
+                        android:tint="@color/orange_anime_list_icons" />
 
                     <com.google.android.material.textview.MaterialTextView
                         android:id="@+id/animeCardReleaseDateTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
                         android:layout_gravity="bottom"
+                        android:layout_marginStart="5dp"
 
                         tools:text="12-12-1988" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
@@ -177,11 +178,57 @@
                         android:id="@+id/animeCardViewAmountOfTimeTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
                         android:layout_gravity="bottom"
+                        android:layout_marginStart="5dp"
 
                         tools:text="24 ep" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
+
+                <com.google.android.material.tabs.TabLayout
+                    android:id="@+id/pager_tabs"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:tabMode="scrollable">
+
+                    <com.google.android.material.tabs.TabItem
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="First" />
+
+                    <com.google.android.material.tabs.TabItem
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Seconds" />
+
+                    <com.google.android.material.tabs.TabItem
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Third" />
+
+                    <com.google.android.material.tabs.TabItem
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Fourth" />
+
+                    <com.google.android.material.tabs.TabItem
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Fifth" />
+                </com.google.android.material.tabs.TabLayout>
+
+                <LinearLayout
+                    android:id="@+id/pager"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:background="@color/orange"
+                    android:gravity="bottom|center_horizontal"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Hello" />
+                </LinearLayout>
             </androidx.appcompat.widget.LinearLayoutCompat>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
