--- a/app/src/main/res/layout/fragment_anime_episodes.xml
+++ b/app/src/main/res/layout/fragment_anime_episodes.xml
@@ -9,6 +9,8 @@
         android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingHorizontal="12dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
 
         tools:listitem="@layout/list_item_anime_episode" />
