--- a/app/src/main/res/layout/list_item_anime_episode.xml
+++ b/app/src/main/res/layout/list_item_anime_episode.xml
@@ -2,67 +2,108 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
-    app:cardCornerRadius="15dp"
-    app:cardElevation="10dp">
+    android:layout_height="150dp"
+    app:cardCornerRadius="12dp"
+    app:cardElevation="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginVertical="10dp"
+        android:paddingHorizontal="5dp">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/epImage"
-            android:layout_width="0dp"
-            android:layout_height="120dp"
-            android:src="@drawable/apple_logo"
-            android:scaleType="centerInside"
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/epImageCardView"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:elevation="5dp"
+            app:cardCornerRadius="8dp"
 
-            app:layout_constraintHorizontal_chainStyle="spread_inside"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/firstLinLayout"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintHorizontal_chainStyle="spread_inside"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/epImage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@color/white"
+
+                />
+        </com.google.android.material.card.MaterialCardView>
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/firstLinLayout"
             android:layout_width="0dp"
-            android:layout_height="100dp"
-            android:gravity="center_horizontal"
+            android:layout_height="120dp"
             android:orientation="vertical"
 
-            app:layout_constraintHorizontal_chainStyle="spread_inside"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/epImage"
+            app:layout_constraintHorizontal_chainStyle="spread_inside"
+            app:layout_constraintStart_toEndOf="@id/epImageCardView"
             app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/seasonEpisodeTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="Season 1 episode 1" />
-
-            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/titleTextView"
+                style="@style/mainTitleEpList"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
                 android:text="Title" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/descriptionTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
+                android:ellipsize="end"
+                android:maxLines="3"
                 android:text="Description" />
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/lengthTextView"
+                android:id="@+id/seasonEpisodeTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="Length: n minutes" />
+                android:text="S1 EP1"
+                android:textColor="@color/orange" />
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/animeCardViewAmountOfTimeImageView"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginEnd="5dp"
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:src="@drawable/clock"
+                    android:tint="@color/orange_anime_list_icons" />
+
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/lengthTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:textColor="@color/black"
+                    android:text="25 min" />
+
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:layout_width="100dp"
+                    android:layout_height="35dp"
+                    android:layout_gravity="end"
+                    android:background="@drawable/button_selector"
+                    android:text="Watch Now"
+                    android:textColor="@color/button_text_selector" />
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+
         </androidx.appcompat.widget.LinearLayoutCompat>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
