added progressBar Logic to characterScreen, fixed minor visual bugs

--- a/app/src/main/res/layout/fragment_anime.xml
+++ b/app/src/main/res/layout/fragment_anime.xml
@@ -24,7 +24,8 @@
         android:id="@+id/animeSwipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/app_bar">
+        app:layout_constraintTop_toBottomOf="@id/app_bar"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/animeRecyclerView"
