--- a/app/src/main/res/layout/list_item_anime_character.xml
+++ b/app/src/main/res/layout/list_item_anime_character.xml
@@ -7,35 +7,37 @@
     app:cardCornerRadius="12dp"
     app:cardElevation="5dp">
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/imageIV"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/innerCardView"
-        android:src="@drawable/code_geass_title"/>
-
-
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/innerCardView"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/orange"
-        app:layout_constraintTop_toBottomOf="@+id/imageIV"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:orientation="vertical">
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/nameTV"
-            style="@style/mainTitleEpList"
-            android:layout_width="wrap_content"
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/imageIV"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/code_geass_title"
+            android:layout_marginBottom="-40dp" />
+
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/innerCardView"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|center_vertical"
-            android:layout_marginVertical="20dp"
-            tools:text="@string/_1234567890" />
-    </com.google.android.material.card.MaterialCardView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+            app:cardBackgroundColor="@color/orange">
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/nameTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center|center_vertical|center_horizontal"
+                android:layout_marginVertical="18dp"
+                android:paddingHorizontal="40dp"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                tools:text="@string/_1234567890" />
+        </com.google.android.material.card.MaterialCardView>
+    </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
